# smart-tree

./: .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md  SMART_TREE_CHEET_SHEET.md  SOCIOPROPHET-INTEGRATION.md  TERMINAL_EXAMPLES.md  test_context_aware.md
.github/workflows/: sourceos-context.yml
agent-registry/: smart-tree-context-provider.yaml
completions/: st.fish  st.zsh
config/: tmux-forest.yaml
docs/: GEMINI_CLI.md  PROPHET_UNDERSTAND_EMITTER.md  ST_DAEMON_VISION.md  lampstand-bridge.md  sourceos-adapter-closeout.md  sourceos-adapter-contract.md  sourceos-implementation-roadmap.md  sourceos-lampstand-sherlock-memorymesh-closeout.md  st.1
examples/: SSE_QUICK_START.md  sse_curl_examples.sh  sse_test_server.py  test_sse_curl.sh
expert_prompt_engineer/: Cargo.toml
policy/: sourceos.repo_context.read_only.yaml
schemas/: sourceos-smart-tree-adapter.v1.schema.json
scripts/: gemini_cli_setup.sh  interactive_setup.sh  manage.sh
src/: ai_install.rs  auth.rs  claude_init.rs  cli.rs  collaboration.rs  config.rs  daemon.rs  daemon_client.rs  main.rs  registry.rs  security_scan.rs  service_manager.rs  sourceos_context_adapter.rs  sourceos_context_adapter_publish.rs  sourceos_context_adapter_publish2.rs
src/mcp/: hook_tools.rs  mod.rs  tools_consolidated.rs  tools_consolidated_enhanced.rs
src/mcp/tools/: definitions.rs  interactive.rs  mod.rs  search.rs
src/mem8/: integration.rs
src/proxy/: mod.rs  oauth.rs  server.rs  token_store.rs  zai.rs
src/web_dashboard/: api.rs  mcp_http.rs  mod.rs  server.rs
src/web_dashboard/assets/: app.js  index.html  style.css
st-protocol/src/: address.rs
systemd/: smart-tree-daemon.service
test_files/: package.json  test.env
tests/: sourceos_context_cli.rs  sourceos_context_lampstand_publish.rs
tools/: emit_prophet_understanding.py  smoke_prophet_understanding_emitter.py  validate_sourceos_adapter_live_outputs.py  validate_sourceos_adapter_schema.py
